[package]
name = "version"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = { version = "0.17.2", features = [] }
regex = "1.9.1"
sys-locale = "0.3.0"
indoc = "2"
serde_derive = "1.0.180"
serde = "1.0.180"
serde_json = "1.0.104"
colored = "2.0.4"
terminal-emoji = "0.4.1"
ansi-colors-macro = "0.1.2"
chrono = "0.4.26"
cached = { version = "0.44.0", features = ["proc_macro"] }

[profile.release]
strip = true